force-app/main/default/objects/Customer_Delay__c/Customer_Delay__c.object-meta.xml
<CustomObject>
    <description>US547</description>
    <label>Customer Delay</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Customer Delay ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Delays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>