force-app/main/default/objects/Customer_Delay__c/fields/Customer_Delay_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Delay_Comments__c</fullName>
    <description>US547</description>
    <label>Customer Delay Comments</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>