force-app/main/default/objects/Customer_Delay__c/fields/Customer_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Customer_Delay_Reason__c</fullName>
    <description>US547</description>
    <label>Customer Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer_Requires_Additional_Approvals</fullName>
                <label>Customer Requires Additional Approvals</label>
            </value>
            <value>
                <fullName>Customer_Unavailable</fullName>
                <label>Customer Unavailable</label>
            </value>
            <value>
                <fullName>Customer_Missed_Deadline</fullName>
                <label>Customer Missed Deadline</label>
            </value>
            <value>
                <fullName>Customer_Requested_Delay</fullName>
                <label>Customer Requested Delay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>