force-app/main/default/objects/Customer_Delay__c/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <description>US547</description>
    <label>Duration (Days)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>