force-app/main/default/objects/Customer_Delay__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <description>US547</description>
    <label>Duration (Minutes)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>