force-app/main/default/objects/Customer_Delay__c/fields/New_Delay_Put_Procurement_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>New_Delay_Put_Procurement_on_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US547</description>
    <label>New Delay - Put Procurement on Hold?</label>
    <type>Checkbox</type>
</CustomField>