force-app/main/default/objects/Customer_Delay__c/fields/Procurement__c.field-meta.xml
<CustomField>
    <fullName>Procurement__c</fullName>
    <description>US547</description>
    <label>Procurement</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer Delays</relationshipLabel>
    <relationshipName>Customer_Delays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>