force-app/main/default/objects/Customer_Delay__c/fields/Procurement_has_Active_Delay__c.field-meta.xml
<CustomField>
    <fullName>Procurement_has_Active_Delay__c</fullName>
    <formula>Procurement__r.Active_Customer_Delay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procurement has Active Delay?</label>
    <type>Checkbox</type>
</CustomField>