force-app/main/default/objects/Customer_Delay__c/fields/Procurement_Stage__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Stage__c</fullName>
    <description>US547</description>
    <label>Procurement Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>