force-app/main/default/objects/Customer_Delay__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <description>US547</description>
    <label>Start DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>