force-app/main/default/objects/Customer_Delay__c/fields/Stop_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Stop_DateTime__c</fullName>
    <description>US547</description>
    <label>Stop DateTime</label>
    <type>DateTime</type>
</CustomField>