force-app/main/default/objects/Customer_Delay__c/validationRules/New_Delay_Proc_Cannot_Have_Active_Delay.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Delay_Proc_Cannot_Have_Active_Delay</fullName>
    <active>true</active>
    <description>US547.  You cannot create a new Customer Delay if the Procurement already has an active Customer Delay.</description>
    <errorConditionFormula>AND(
 ISNEW() ,
  Procurement_has_Active_Delay__c 
)</errorConditionFormula>
    <errorMessage>You cannot create a new Customer Delay if the Procurement already has an active Customer Delay.</errorMessage>
</ValidationRule>