force-app/main/default/objects/Customer_Delay__c/validationRules/Start_DateTime_cannot_be_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_DateTime_cannot_be_in_Future</fullName>
    <active>true</active>
    <description>US547.  You cannot set the Start of a Customer Delay for a DateTime that is in the future.</description>
    <errorConditionFormula>Start_DateTime__c &gt; NOW()</errorConditionFormula>
    <errorMessage>You cannot set the Start of a Customer Delay for a DateTime that is in the future.</errorMessage>
</ValidationRule>