force-app/main/default/objects/Customer_Delay__c/validationRules/Stop_Must_Be_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Stop_Must_Be_After_Start</fullName>
    <active>true</active>
    <description>US547.  On a Customer Delay, the Stop DateTime cannot be before the Start DateTime.</description>
    <errorConditionFormula>Stop_DateTime__c &lt;  Start_DateTime__c</errorConditionFormula>
    <errorMessage>On a Customer Delay, the Stop DateTime cannot be before the Start DateTime.</errorMessage>
</ValidationRule>